--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
+    <nav id="top">
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>News</li>
+            <li> <a href="#top">Home</a></li>
+            <li> <a href="#about">About</a></li>
+            <li> <a href="http://www.google.com" target="_blank">News</a></li>
             <li>Contact</li>
         </ul>
     </nav>
@@ -21,82 +21,14 @@
         <header>
             <h1>Codice D' Boca</h1>
         </header>
-        <section class="menu-items" id="menu">
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-                <!-- </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div>
-            <div class="menu-item">
-                <h3>Salmon Sorrento</h3>
-                <p>Lemon butter sauce, Roma tomatoes &amp; capers.</p>
-            </div> -->
-        </section>
+        <section class="menu-items" id="menu"></section>
     </main>
+        <section class = "aboutUs" id = "about">
+            <h3>About us</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam doloremque obcaecati, veniam incidunt natus vitae? Ducimus nisi est nihil modi quod possimus dolorum harum voluptas, officiis officia quisquam voluptatibus voluptatem?</p>
+        </section>
+        </section>
+    
     <footer>By Boca Code</footer>
     <script src = "script.js"></script>
 </body>
